--- a/src/app/courses-card-list/courses-card-list.component.html
+++ b/src/app/courses-card-list/courses-card-list.component.html
@@ -1,19 +1,21 @@
-
 @for (course of courses; track course) {
   <mat-card class="course-card mat-elevation-z10">
     <mat-card-header>
-      <mat-card-title>{{course.description}}</mat-card-title>
+      <mat-card-title>{{ course.description }}</mat-card-title>
     </mat-card-header>
-    <img mat-card-image [src]="course.iconUrl">
+    <img mat-card-image [src]="course.iconUrl" />
     <mat-card-content>
-      <p>{{course.longDescription}}</p>
+      <p>{{ course.longDescription }}</p>
     </mat-card-content>
     <mat-card-actions class="course-actions">
-      <button mat-raised-button color="primary" [routerLink]="['/courses', course.id]">
+      <button
+        mat-raised-button
+        color="primary"
+        [routerLink]="['/courses', course.id]"
+      >
         VIEW COURSE
       </button>
-      <button mat-raised-button color="accent"
-        (click)="editCourse(course)">
+      <button mat-raised-button color="accent" (click)="editCourse(course)">
         EDIT
       </button>
     </mat-card-actions>
